# HPLM_SQL

./: .gitignore  01_功能说明.md  02_数据库设计.md  03_功能设计.md  04_AI使用记录.md  plan.md  plan1.md  使用说明.md
06_src/: .gitignore  CMakeLists.txt  README.md
06_src/config/: db.ini
06_src/sql/: init.sql  seed.sql
06_src/src/: main.cpp
06_src/src/db/: DatabaseManager.cpp  DatabaseManager.h
06_src/src/db/repository/: BatchMaterialRepo.cpp  BatchMaterialRepo.h  ComponentPriceRepo.cpp  ComponentPriceRepo.h  ComponentRepo.cpp  ComponentRepo.h  CustomerRepo.cpp  CustomerRepo.h  EmployeeRepo.cpp  EmployeeRepo.h  InventoryRepo.cpp  InventoryRepo.h  InventoryTransactionRepo.cpp  InventoryTransactionRepo.h  ProductBOMRepo.cpp  ProductBOMRepo.h  ProductFeedbackRepo.cpp  ProductFeedbackRepo.h  ProductRepo.cpp  ProductRepo.h  ProductVersionRepo.cpp  ProductVersionRepo.h  ProductionBatchRepo.cpp  ProductionBatchRepo.h  RepairMaterialRepo.cpp  RepairMaterialRepo.h  RepairRecordRepo.cpp  RepairRecordRepo.h  SupplierRepo.cpp  SupplierRepo.h  TestRecordRepo.cpp  TestRecordRepo.h  VersionCostRepo.cpp  VersionCostRepo.h  WarehouseRepo.cpp  WarehouseRepo.h
06_src/src/service/: AuthService.cpp  AuthService.h  BOMExportService.cpp  BOMExportService.h  BOMImportService.cpp  BOMImportService.h  FeedbackService.cpp  FeedbackService.h  InventoryService.cpp  InventoryService.h  ProductionService.cpp  ProductionService.h  RepairService.cpp  RepairService.h  TraceService.cpp  TraceService.h
06_src/src/ui/: BOMImportDialog.cpp  BOMImportDialog.h  ComponentPage.cpp  ComponentPage.h  DashboardPage.cpp  DashboardPage.h  FeedbackPage.cpp  FeedbackPage.h  LoginPage.cpp  LoginPage.h  MainWindow.cpp  MainWindow.h  ProductVersionPage.cpp  ProductVersionPage.h  ProductionBatchPage.cpp  ProductionBatchPage.h  RepairPage.cpp  RepairPage.h  TracePage.cpp  TracePage.h
